<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TripActivity">

    <!-- TODO RecyclerView -->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="75dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/addActivity"
        app:layout_constraintEnd_toEndOf="@+id/submit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/text_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/submit"
        app:layout_constraintStart_toStartOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/addActivity"
        android:layout_width="408dp"
        android:layout_height="69dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/add_media_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/submit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/Text_Send_Description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send" />

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/recyclerview"-->
        <!--android:scrollbars="vertical"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginBottom="75dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/addActivity"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->
</androidx.constraintlayout.widget.ConstraintLayout>
